--- a/polymer/eduke32/Makefile.common
+++ b/polymer/eduke32/Makefile.common
@@ -1011,14 +1011,6 @@ ifneq (0,$(POLYMER))
  endif
 endif
 
-STATICSTDCPP?=
-ifeq (1,$(STATICSTDCPP))
-    STATICSTDCPP= -static
-endif
-ifeq (0,$(STATICSTDCPP))
-    STATICSTDCPP= -shared
-endif
-
 
 ifneq ($(PLATFORM),WINDOWS)
     ifneq ($(PLATFORM),WII)
@@ -1111,7 +1103,7 @@ ifeq ($(PRETTY_OUTPUT),1)
 RECIPE_IF = if
 BUILD_SETTINGS_COMPILER = \033[1;36mcompiler: \033[0;36m\"$(COMPILER) $(COMMONFLAGS) $(COMPILERFLAGS)\"
 BUILD_SETTINGS_ASSEMBLER = \033[1;36massembler: \033[0;36m\"$(AS) $(ASFLAGS)\"
-BUILD_SETTINGS_LINKER = \033[1;36mlinker: \033[0;36m\"$(LINKER) $(COMMONFLAGS) $(LINKERFLAGS) $(LIBDIRS) $(LIBS) $(STATICSTDCPP) $(STDCPPLIB)\"
+BUILD_SETTINGS_LINKER = \033[1;36mlinker: \033[0;36m\"$(LINKER) $(COMMONFLAGS) $(LINKERFLAGS) $(LIBDIRS) $(LIBS) $(STDCPPLIB)\"
 ifeq (0,$(NOASM))
     BUILD_SETTINGS = printf "$(BUILD_SETTINGS_COMPILER)\n$(BUILD_SETTINGS_ASSEMBLER)\n$(BUILD_SETTINGS_LINKER)\033[0m\n"
 else
