--- a/polymer/eduke32/Makefile.common
+++ b/polymer/eduke32/Makefile.common
@@ -281,6 +281,7 @@ CXXONLYFLAGS= -fno-exceptions -fno-rtti
 ASFORMAT=elf$(SYSBITS)
 ASFLAGS=-s -f $(ASFORMAT) #-g
 LINKERFLAGS=
+L_CXXONLYFLAGS=
 LIBS=-lm
 GUI_LIBS=
 LIBDIRS=
@@ -775,6 +776,9 @@ endif
 ifeq ($(PLATFORM),WINDOWS)
     COMPILERFLAGS+= -DUNDERSCORES -DHAVE_INTTYPES -Iplatform/Windows/include
     LINKERFLAGS+= -static-libgcc
+    ifeq (0,$(CLANG))
+        L_CXXONLYFLAGS += -static-libstdc++
+    endif
     ASFORMAT=win$(SYSBITS)
     ASFLAGS+= -DUNDERSCORES
 
@@ -1080,10 +1084,10 @@ endif
 
 COMPILER=$(CC) $(CONLYFLAGS)
 COMPILER_OBJC=$(COBJC) $(CONLYFLAGS)
-LINKER=$(L_CC)
+LINKER=$(L_CC) $(CONLYFLAGS)
 ifneq ($(CPLUSPLUS),0)
     COMPILER=$(CXX) $(CXXONLYFLAGS)
-    LINKER=$(L_CXX)
+    LINKER=$(L_CXX) $(CXXONLYFLAGS) $(L_CXXONLYFLAGS)
 endif
 
 ifneq (,$(CUSTOMOPT))
