Clean up self-modifying assembly unprotection and add PROT_EXEC to mprotect() calls.
This fixes NOASM=0 under OS X.

git-svn-id: http://svn.eduke32.com/eduke32@5760 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/Makefile.common
+++ b/polymer/eduke32/Makefile.common
@@ -716,10 +716,15 @@ ifeq ($(SUBPLATFORM),LINUX)
 endif
 ifeq ($(PLATFORM),DARWIN)
     COMPILERFLAGS+= -DUNDERSCORES
-    ASFORMAT=macho$(SYSBITS)
+    ASFORMAT=macho
     ASFLAGS+= -DUNDERSCORES
-    # ASM on OS X crashes in mmxoverlay()
-    override NOASM=1
+
+    ifeq ($(findstring x86_64,$(SYSARCH)),x86_64)
+        ifeq (0,$(BUILD32_ON_64))
+            ASFORMAT+=64
+            override NOASM=1
+        endif
+    endif
 
     # LIBDIRS+= -Lplatform/Apple/lib
     # COMPILERFLAGS+= -Iplatform/Apple/include
