Makefile: Add extra optimization defaults for OS X builds since all Intel Macs are guaranteed certain features due to the time of their debut.
git-svn-id: http://svn.eduke32.com/eduke32@5763 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/Makefile.common
+++ b/polymer/eduke32/Makefile.common
@@ -388,8 +388,17 @@ endif
 
 ifndef OPTOPT
     ifeq ($(findstring i386, $(IMPLICIT_ARCH)),i386)
-        OPTOPT=-march=pentium3 $(M_TUNE_GENERIC) -mmmx
-        # -msse2 -mfpmath=sse,387 -malign-double $(M_STACKREALIGN)
+        ifeq ($(PLATFORM),DARWIN)
+            OPTOPT=-march=nocona -mmmx -msse -msse2 -msse3
+        else
+            OPTOPT=-march=pentium3 $(M_TUNE_GENERIC) -mmmx
+            # -msse2 -mfpmath=sse,387 -malign-double $(M_STACKREALIGN)
+        endif
+    endif
+    ifeq ($(findstring x86_64, $(IMPLICIT_ARCH)),x86_64)
+        ifeq ($(PLATFORM),DARWIN)
+            OPTOPT=-march=core2 -msse3 -mssse3
+        endif
     endif
 endif
 
