Makefile: Switch the detection order of OPTOPT flags so that i386 is checked after x86_64. This ensures full compatibility for fat OS X binaries built using ARCH="-arch i386 -arch x86_64".
git-svn-id: http://svn.eduke32.com/eduke32@5766 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/Makefile.common
+++ b/polymer/eduke32/Makefile.common
@@ -389,17 +389,17 @@ else
 endif
 
 ifndef OPTOPT
+    ifeq ($(findstring x86_64, $(IMPLICIT_ARCH)),x86_64)
+        ifeq ($(PLATFORM),DARWIN)
+            OPTOPT=-march=core2 -mmmx -msse -msse2 -msse3 -mssse3
+        endif
+    endif
     ifeq ($(findstring i386, $(IMPLICIT_ARCH)),i386)
         ifeq ($(PLATFORM),DARWIN)
             OPTOPT=-march=nocona -mmmx -msse -msse2 -msse3
         else
             OPTOPT=-march=pentium3 $(M_TUNE_GENERIC) -mmmx
             # -msse2 -mfpmath=sse,387 -malign-double $(M_STACKREALIGN)
-        endif
-    endif
-    ifeq ($(findstring x86_64, $(IMPLICIT_ARCH)),x86_64)
-        ifeq ($(PLATFORM),DARWIN)
-            OPTOPT=-march=core2 -msse3 -mssse3
         endif
     endif
 endif
